# alive-ecs

./: .gitignore  .travis.yml  CMakeLists.txt  Entity.cpp  Entity.hpp  README.md  main.cpp
include/core/: component.hpp  entity.hpp  entitymanager.hpp
src/core/: component.cpp  entity.cpp  entitymanager.cpp
tests/: components_test.cpp  entities_test.cpp  entitymanager_test.cpp  test_entities.cpp  test_entities_lifecycle.cpp  test_entitymanager.cpp  test_lifecycle.cpp  test_performance.cpp  test_systems.cpp
tests/googletest/googletest/include/gtest/internal/: gtest-port.h
tests/test_components/: components.cpp  components.hpp
tests/test_systems/: systems.cpp  systems.hpp
